# jam-p2p

./: .cron-state.md  .gitignore  AGENTS.md  ANALISI_COMPOSER.md  ANALISI_MINIMAX.md  ANALISI_OPUS.md  ANALISI_UNIFICATA.md  CHANGELOG.md  CLAUDE.md  COMPENDIO.md  README.md  ROADMAP.md
.agent/memory/episodic/: AGENT_LEARNINGS.jsonl
.github/workflows/: build.yml
docs/architecture/: EMA-40-unblock-actions.md  EMA-45-recovery.md  system-overview.md
docs/architecture/decisions/: adr-001-ws-reconnect.md
docs/process/: BRANCH-PROTECTION.md  CODE-SIGNING.md  branch-protection-payload.json
docs/testing/: E2E-AUDIO-PROCEDURE.md  E2E-AUDIO-RESULTS-2026-06-22.md  EMA-16-progress.md  P0.5-SECURE-PATH-PROCEDURE.md  audio-quality-test-plan.md  mesh-verification-plan.md  multi-peer-mesh-test-plan.md
docs/testing/scripts/: p0.5-secure-dev-smoke.ps1  package.json  test-disconnect.js  test-graceful-shutdown.js  test-mesh-signaling.js  test-race-simultaneous-join.js  test-stress-rapid-join-leave.js  test-webrtc-mesh.js
jam-gui/: .eslintrc.json  .gitignore  README.md  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
jam-gui/src/: App.css  App.test.tsx  App.tsx  ga.ts  roomToken.ts  types.ts
jam-gui/src-tauri/: Cargo.toml  clippy.toml  tauri.conf.json
jam-gui/src-tauri/.cargo/: config.toml
jam-gui/src-tauri/capabilities/: default.json
jam-gui/src-tauri/src/: audio.rs  backend.rs  config.rs  jitter_buffer.rs  logger.rs  main.rs  messages.rs  signaling.rs  state.rs  webrtc.rs
jam-gui/src/components/: AnalyticsPanel.css  AnalyticsPanel.test.tsx  AnalyticsPanel.tsx  ConnectionForm.css  ConnectionForm.tsx  LocalMicCard.css  LocalMicCard.tsx  PeerCard.css  PeerCard.tsx  SettingsPanel.css  SettingsPanel.tsx  StatusBar.css  StatusBar.tsx  VuMeter.css  VuMeter.tsx
jam-gui/src/hooks/: useNetworkStats.ts  usePeers.ts  useSessionAnalytics.ts  useTauriEvents.ts
jam-signaler/: .dockerignore  .env.example  Caddyfile  Caddyfile.secure-dev  Dockerfile  docker-compose.prod.yml  docker-compose.secure-dev.yml  docker-compose.yml  package-lock.json  package.json  server.js
jam-signaler/__tests__/: server.integration.test.js  server.room-auth.integration.test.js  server.turn.integration.test.js
jam-signaler/lib/: rate-limit.js  room-auth.js  rooms.js  turn-credentials.js  validation.js
jam-signaler/lib/__tests__/: rate-limit.test.js  room-auth.test.js  (+3 more)
test_standalone/: Cargo.toml
test_standalone/src/: main.rs
