[package]
name = "jam-gui"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.10", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures = "0.3"
cpal = "0.15"
ringbuf = "0.4"
url = "2.5"
bytes = "1.5"
opus = "0.3"
webrtc = "0.10"
uuid = { version = "1.7", features = ["v4", "serde"] }
anyhow = "1.0"
once_cell = "1.19"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry"] }
