[package]
name = "jam-gui"
version = "0.1.0"
description = "P2P audio jam session app with low-latency WebRTC"
authors = ["jam-p2p contributors"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.10", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures = "0.3"
cpal = "0.15"
ringbuf = "0.4"
bytes = "1.5"
opus = "0.3"
webrtc = "0.11"
anyhow = "1.0"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
pedantic = "warn"
